[package]
name = "common-crypto"
version = "0.3.1-alpha.0"
authors = ["Steven Joruk <steven@joruk.com>"]
edition = "2021"
license = "MIT"
description = "Bindings to Apple's Common Crypto library"
repository = "https://github.com/steven-joruk/common-crypto"
keywords = ["crypto"]
categories = ["os::macos-apis", "cryptography", "api-bindings"]
readme = "README.md"

[dev-dependencies]
hex = "0.4.3"
